--- a/pms/views/ir_sequence_views.xml
+++ b/pms/views/ir_sequence_views.xml
@@ -5,25 +5,17 @@
         <field name="inherit_id" ref="base.sequence_view" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='company_id']" position="after">
-                <field
-                    string="Property"
-                    name="pms_property_id"
-                />
+                <field string="Property" name="pms_property_id" />
             </xpath>
         </field>
     </record>
-
     <record id="ir_sequence_view_tree" model="ir.ui.view">
         <field name="model">ir.sequence</field>
         <field name="inherit_id" ref="base.sequence_view_tree" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='company_id']" position="after">
-                <field
-                    string="Property"
-                    name="pms_property_id"
-                />
+                <field string="Property" name="pms_property_id" />
             </xpath>
         </field>
     </record>
-
 </odoo>
